--- a/src/DagAir_WebApplications/DagAir.WebClientApp/Pages/Index.cshtml
+++ b/src/DagAir_WebApplications/DagAir.WebClientApp/Pages/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@model IndexModel
     <div class="container">
         <div class="row">&nbsp;</div>
         <div class="row">
@@ -27,4 +28,5 @@
         </div>
     </div>
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
+<script type="text/javascript" src="~/js/@Model.Environment"></script>
 <script src="~/js/chat.js"></script>
