DAGAIR-29 Add affiliates and rooms controllers

--- a/src/DagAir.WebApps.WebAdminApp2/Views/Facilities/_ViewImports.cshtml
+++ b/src/DagAir.WebApps.WebAdminApp2/Views/Facilities/_ViewImports.cshtml
@@ -1,2 +1,2 @@
 @using DagAir.WebApps.WebAdminApp2.Controllers
-@namespace DagAir.WebApps.WebAdminApp2.Facilities
+@namespace DagAir.WebApps.WebAdminApp2.Views.Facilities
