--- a/src/DagAir.WebApps.WebAdminApp2/Views/Affiliates/_Layout.cshtml
+++ b/src/DagAir.WebApps.WebAdminApp2/Views/Affiliates/_Layout.cshtml
@@ -9,10 +9,10 @@
     }
 }
 
-<h2>Manage Affiliates</h2>
+<h2>Manage organizations</h2>
 
 <div>
-    <h4>See affiliates' information</h4>
+    <h4>See organizations' information</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
