--- a/src/DagAir.WebApps.WebAdminApp2/Views/Facilities/Organizations.cshtml
+++ b/src/DagAir.WebApps.WebAdminApp2/Views/Facilities/Organizations.cshtml
@@ -1,7 +1,7 @@
-@using DagAir.WebApps.WebAdminApp2.Views.Facilities
 @model GetOrganizationsModel
 @{
     ViewData["Title"] = "See organizations";
+    ViewData["ActivePage"] = ManageFacilitiesPages.DownloadOrganizations;
 }
 <h4>@ViewData["Title"]</h4>
 <div class="row">
