--- a/src/DagAir.WebApps.WebAdminApp2/Views/Shared/_LoginPartial.cshtml
+++ b/src/DagAir.WebApps.WebAdminApp2/Views/Shared/_LoginPartial.cshtml
@@ -4,6 +4,9 @@
 @if (User.Identity.IsAuthenticated)
 {
     <li class="nav-item">
+        <a id="manage" class="nav-link text-dark" asp-area="" asp-controller="Facilities" asp-action="Organizations" title="Dashboard">Dashboard</a>
+    </li>
+    <li class="nav-item">
         <a id="manage" class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index" title="Manage">Hello @User.Identity.Name</a>
     </li>
     <li class="nav-item">
