DAGAIR-33 Add organizations and affiliates pages

--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Affiliates/Affiliates.cshtml
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Affiliates/Affiliates.cshtml
@@ -9,7 +9,7 @@
         <ul class="nav nav-pills flex-column">
             @foreach (var affiliate in Model.AffiliateDtos)
             {
-                <li>@Html.DisplayFor(modelItem => affiliate.Name)</li>
+                @Html.ActionLink(affiliate.Name, "Affiliate", "Affiliates", new {affiliateId = affiliate.Id}, null)
             }
         </ul>
     </div>
