--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Rooms/Room.cshtml
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Rooms/Room.cshtml
@@ -1,5 +1,6 @@
-@model RoomModel
-<div class="row">
+@model UniqueRoomModel
+<h4>Room with Id @Model.UniqueRoomId</h4>
+    <div class="row">
         <div class="col-12">
             <hr />
         </div>
@@ -12,3 +13,6 @@
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script type="text/javascript" src="~/js/@Model.Environment"></script>
 <script src="~/js/chat.js"></script>
+<script>
+SetUniqueRoomId('@Model.UniqueRoomId');
+</script>
