DAGAIR-36 Fix urls to services

--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Facilities/Organization.cshtml
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Facilities/Organization.cshtml
@@ -21,7 +21,7 @@
                     @foreach (var affiliate in Model.OrganizationDto.Affiliates)
                     {
                         <li>
-                            @Html.ActionLink(affiliate.Name, "Affiliate", "Affiliates", new {organizationId = affiliate.Id}, null)
+                            @Html.ActionLink(affiliate.Name, "Affiliate", "Affiliates", new {affiliateId = affiliate.Id}, null)
                         </li>
                     }
                 </ul>
