--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Facilities/_Layout.cshtml
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Facilities/_Layout.cshtml
@@ -9,10 +9,10 @@
     }
 }
 
-<h2>Manage Affiliates</h2>
+<h2>Manage Organizations</h2>
 
 <div>
-    <h4>See affiliates' information</h4>
+    <h4>See information about organizations</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
