--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Affiliates/Affiliates.cshtml
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Affiliates/Affiliates.cshtml
@@ -6,10 +6,13 @@
 <h4>@ViewData["Title"]</h4>
 <div class="row">
     <div class="col-md-6">
-        <ul class="nav nav-pills flex-column">
-            @foreach (var affiliate in Model.AffiliateDtos)
+        <ul class="list-group">
+            @foreach (var affiliate in Model.AdminNodeAffiliateDtos)
             {
-                @Html.ActionLink(affiliate.Name, "Affiliate", "Affiliates", new {affiliateId = affiliate.Id}, null)
+                <li class="list-group-item">
+                    @Html.ActionLink(affiliate.AffiliateDto.Name, "Affiliate", "Affiliates", new {affiliateId = affiliate.AffiliateDto.Id}, null)
+                </li>
+                
             }
         </ul>
     </div>
