--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Facilities/Organization.cshtml
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Facilities/Organization.cshtml
@@ -1,26 +1,27 @@
 @model GetOrganizationModel
 @{
-    ViewData["Title"] = "See organizations";
+    ViewData["Title"] = "See organization";
     ViewData["ActivePage"] = ManageFacilitiesPages.DownloadOrganizations;
 }
 <h4>@ViewData["Title"]</h4>
 <div class="row">
     <div class="col-md-6">
-        <table>
-            <tr>
-                <th>Name</th>
-                <th>Address</th>
-            </tr>
-            <tr>
-                <td>@Model.OrganizationDto.Name</td>
-                <td>@Model.OrganizationDto.AddressId</td>
-            </tr>
-        </table>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">@Model.AdminNodeOrganizationDto.OrganizationDto.Name</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Address</h6>
+          </div>
+          <ul class="list-group list-group-flush">
+              <li class="list-group-item">Country: @Model.AdminNodeOrganizationDto.AddressDto.Country.Name</li>
+              <li class="list-group-item">City: @Model.AdminNodeOrganizationDto.AddressDto.City.Name</li>
+              <li class="list-group-item">Post code: @Model.AdminNodeOrganizationDto.AddressDto.PostalCode.Number</li>
+            </ul>
+        </div>
         <h4>Affiliates</h4>
-        <ul class="nav nav-pills flex-column">
-                    @foreach (var affiliate in Model.OrganizationDto.Affiliates)
+        <ul class="list-group">
+                    @foreach (var affiliate in Model.AdminNodeOrganizationDto.OrganizationDto.Affiliates)
                     {
-                        <li>
+                        <li class="list-group-item">
                             @Html.ActionLink(affiliate.Name, "Affiliate", "Affiliates", new {affiliateId = affiliate.Id}, null)
                         </li>
                     }
