DAGAIR-37 Add ui interface to add new affiliate

--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Facilities/AddNewOrganization.cshtml
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Facilities/AddNewOrganization.cshtml
@@ -1,6 +1,6 @@
 @model GetOrganizationModel
 @{
-    ViewData["Title"] = "See organization";
+    ViewData["Title"] = "Add new organization";
     ViewData["ActivePage"] = ManageFacilitiesPages.DownloadOrganizations;
 }
 <h4>@ViewData["Title"]</h4>
