--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Facilities/Organization.cshtml
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Facilities/Organization.cshtml
@@ -7,24 +7,39 @@
 <div class="row">
     <div class="col-md-6">
         <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">@Model.AdminNodeOrganizationDto.OrganizationDto.Name</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Address</h6>
-          </div>
-          <ul class="list-group list-group-flush">
-              <li class="list-group-item">Country: @Model.AdminNodeOrganizationDto.AddressDto.Country.Name</li>
-              <li class="list-group-item">City: @Model.AdminNodeOrganizationDto.AddressDto.City.Name</li>
-              <li class="list-group-item">Post code: @Model.AdminNodeOrganizationDto.AddressDto.PostalCode.Number</li>
+            <div class="card-body">
+                <h5 class="card-title">@Model.AdminNodeOrganizationDto.OrganizationDto.Name</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Address</h6>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Country: @Model.AdminNodeOrganizationDto.AddressDto.Country.Name</li>
+                <li class="list-group-item">City: @Model.AdminNodeOrganizationDto.AddressDto.City.Name</li>
+                <li class="list-group-item">Post code: @Model.AdminNodeOrganizationDto.AddressDto.PostalCode.Number</li>
             </ul>
         </div>
-        <h4>Affiliates</h4>
-        <ul class="list-group">
-                    @foreach (var affiliate in Model.AdminNodeOrganizationDto.OrganizationDto.Affiliates)
-                    {
-                        <li class="list-group-item">
-                            @Html.ActionLink(affiliate.Name, "Affiliate", "Affiliates", new {affiliateId = affiliate.Id}, null)
-                        </li>
-                    }
-                </ul>
     </div>
+</div>
+<h4>Affiliates</h4>
+<div class="row">
+    <div class="col-md-6">
+        <div class="btn-group" role="group" aria-label="Basic example">
+            @Html.ActionLink("Add new affiliate", "AddNewAffiliate", "Affiliates", 
+                new {organizationId = Model.AdminNodeOrganizationDto.OrganizationDto.Id}, new {@class = "btn btn-success"})
+            <a href="#" class="btn btn-danger" role="button">Delete all affiliates</a>
+        </div>    
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6 ">
+        <ul class="list-group">
+                @foreach (var affiliate in Model.AdminNodeOrganizationDto.OrganizationDto.Affiliates)
+                {
+                    <li class="list-group-item">
+                        @Html.ActionLink(affiliate.Name, "Affiliate", "Affiliates", new {affiliateId = affiliate.Id}, null)
+                    </li>
+                }
+            </ul>
+    </div>
+    
 </div>
