--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Affiliates/Affiliate.cshtml
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/Views/Affiliates/Affiliate.cshtml
@@ -7,32 +7,44 @@
 <div class="row">
     <div class="col-md-6">
         <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">@Model.AdminNodeAffiliateDto.AffiliateDto.Name</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Address</h6>
-                  </div>
-                  <ul class="list-group list-group-flush">
-                      <li class="list-group-item">Country: @Model.AdminNodeAffiliateDto.AddressDto.Country.Name</li>
-                      <li class="list-group-item">City: @Model.AdminNodeAffiliateDto.AddressDto.City.Name</li>
-                      <li class="list-group-item">Post code: @Model.AdminNodeAffiliateDto.AddressDto.PostalCode.Number</li>
-                    </ul>
-                </div>
-        <h4>Rooms</h4>
-        @if (Model.AdminNodeAffiliateDto.AffiliateDto.Rooms.Count > 0)
-        {
-            <ul class="list-group">
-                @foreach (var room in Model.AdminNodeAffiliateDto.AffiliateDto.Rooms)
-                {
-                    <li class="list-group-item">
-                        @Html.ActionLink($"Room {room.Number}", "Room", "Rooms", new {uniqueRoomId = room.UniqueRoomId}, null)
-                    </li>
-                }
+            <div class="card-body">
+                <h5 class="card-title">@Model.AdminNodeAffiliateDto.AffiliateDto.Name</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Address</h6>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Country: @Model.AdminNodeAffiliateDto.AddressDto.Country.Name</li>
+                <li class="list-group-item">City: @Model.AdminNodeAffiliateDto.AddressDto.City.Name</li>
+                <li class="list-group-item">Post code: @Model.AdminNodeAffiliateDto.AddressDto.PostalCode.Number</li>
             </ul>
-        }
-        else
-        {
-            <h4>Currently there are no rooms assigned to this affiliate.</h4>
-        }
-        
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="btn-group" role="group" aria-label="Basic example">
+            @Html.ActionLink("Add new room", "AddNewRoom", "Rooms", 
+                new {affiliateId = Model.AdminNodeAffiliateDto.AffiliateDto.Id}, new {@class = "btn btn-success"})
+            <a href="#" class="btn btn-danger" role="button">Delete all rooms</a>
+        </div>    
+    </div>
+</div>
+<h4>Rooms</h4>
+<div class="row">
+    <div class="col-md-6">
+        @if (Model.AdminNodeAffiliateDto.AffiliateDto.Rooms.Count > 0)
+            {
+                <ul class="list-group">
+                    @foreach (var room in Model.AdminNodeAffiliateDto.AffiliateDto.Rooms)
+                    {
+                        <li class="list-group-item">
+                            @Html.ActionLink($"Room {room.Number}", "Room", "Rooms", new {uniqueRoomId = room.UniqueRoomId}, null)
+                        </li>
+                    }
+                </ul>
+            }
+            else
+            {
+                <h4>Currently there are no rooms assigned to this affiliate.</h4>
+            }
     </div>
 </div>
