--- a/src/DagAir_WebApplications/WebAdminApp1/Views/Rooms/Room.cshtml
+++ b/src/DagAir_WebApplications/WebAdminApp1/Views/Rooms/Room.cshtml
@@ -37,19 +37,22 @@
             <div class="card-header">Measurements</div>
             <div class="card-body">
                 <h5 class="card-title">Current measurement</h5>
-                <p class="card-text">Temperature: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item1.Temperature</p>
-                <p class="card-text">Illuminance: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item1.Illuminance</p>
-                <p class="card-text">Humidity: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item1.Humidity</p>
+                <p id="current-measurement-temperature" class="card-text">Temperature: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item1.Temperature</p>
+                <p id="current-measurement-illuminance" class="card-text">Illuminance: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item1.Illuminance</p>
+                <p id="current-measurement-humidity" class="card-text">Humidity: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item1.Humidity</p>
             </div>
         </div>
         <div class="card text-white bg-info mb-6" style="max-width: 18rem;">
             <div class="card-header">Policies</div>
             <div class="card-body">
                 <h5 class="card-title">Current policy</h5>
-                <p class="card-text">Expected temperature level: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item2.ExpectedConditions.Temperature</p>
-                <p class="card-text">Expected illuminance level: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item2.ExpectedConditions.Illuminance</p>
-                <p class="card-text">Expected humidity level: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item2.ExpectedConditions.Humidity</p>
+                <p id="current-policy-temperature" class="card-text">Expected temperature level: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item2.ExpectedConditions.Temperature</p>
+                <p id="current-policy-illuminance" class="card-text">Expected illuminance level: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item2.ExpectedConditions.Illuminance</p>
+                <p id="current-policy-humidity" class="card-text">Expected humidity level: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item2.ExpectedConditions.Humidity</p>
             </div>
+        </div>
+        <div class="col-6">
+            <button id="getCurrentMeasurement" type="button" class="btn btn-primary">Get current measurement</button>
         </div>
     </div>
 </div>
