DAGAIR-55 Modify room page to display current values

--- a/src/DagAir_WebApplications/WebAdminApp1/Views/Rooms/Room.cshtml
+++ b/src/DagAir_WebApplications/WebAdminApp1/Views/Rooms/Room.cshtml
@@ -15,7 +15,7 @@
                 <li>
                     <p>
                         <a class="btn btn-primary" data-toggle="collapse" href="@href" role="button" aria-expanded="false" aria-controls="@uniqueId">
-                            @item.value.Item1.Date
+                            @item.value.Item1.Date.Day/@item.value.Item1.Date.Month/@item.value.Item1.Date.Year @item.value.Item1.Date.Hour:@item.value.Item1.Date.Minute:@item.value.Item1.Date.Second
                         </a>
                     </p>
                     <div class="collapse" id="@uniqueId">
