DAGAIR-56 Restructure project

--- a/src/DagAir_WebApplications/WebAdminApp1/Pages/Index.cshtml
+++ b/src/DagAir_WebApplications/WebAdminApp1/Pages/Index.cshtml
@@ -6,5 +6,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Admin application provides you with a possibility to measure and manage the condition
+            of office spaces that you work in. </p>
 </div>
