--- a/src/DagAir_WebApplications/WebAdminApp1/Views/Rooms/_Layout.cshtml
+++ b/src/DagAir_WebApplications/WebAdminApp1/Views/Rooms/_Layout.cshtml
@@ -9,10 +9,9 @@
     }
 }
 
-<h2>Manage affiliates</h2>
+<h2>See detailed information about a given room</h2>
 
 <div>
-    <h4>See information about affiliates</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
