--- a/src/DagAir_WebApplications/WebAdminApp1/Views/Rooms/Room.cshtml
+++ b/src/DagAir_WebApplications/WebAdminApp1/Views/Rooms/Room.cshtml
@@ -6,55 +6,67 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-6 vh-100 overflow-auto">
-        <ul id="messagesList">
-            @foreach (var item in Model.AdminNodeRoomDto.PastMeasurements.Measurements.Select((value, i) => new {i, value}))
-            {
-                string uniqueId = "collapseExample" + item.i;
-                string href = "#" + uniqueId;
-                <li>
-                    <p>
-                        <a class="btn btn-primary" data-toggle="collapse" href="@href" role="button" aria-expanded="false" aria-controls="@uniqueId">
-                            @item.value.Item1.Date.Day/@item.value.Item1.Date.Month/@item.value.Item1.Date.Year @item.value.Item1.Date.Hour:@item.value.Item1.Date.Minute:@item.value.Item1.Date.Second
-                        </a>
-                    </p>
-                    <div class="collapse" id="@uniqueId">
-                        <div class="card card-body">
-                            <p class="card-text">Temperature: @item.value.Item1.Temperature</p>
-                            <p class="card-text">Illuminance: @item.value.Item1.Illuminance</p>
-                            <p class="card-text">Humidity: @item.value.Item1.Humidity</p>
-                            <p class="card-text">Expected temperature level: @item.value.Item2.ExpectedConditions.Temperature</p>
-                            <p class="card-text">Expected illuminance level: @item.value.Item2.ExpectedConditions.Illuminance</p>
-                            <p class="card-text">Expected humidity level: @item.value.Item2.ExpectedConditions.Humidity</p>
-                        </div>
-                    </div>
-                </li>
-            }
-        </ul>
-    </div>
-    <div class="col-6">
-        <div class="card text-white bg-info mb-6" style="max-width: 18rem;">
-            <div class="card-header">Measurements</div>
-            <div class="card-body">
-                <h5 class="card-title">Current measurement</h5>
-                <p id="current-measurement-temperature" class="card-text">Temperature: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item1.Temperature</p>
-                <p id="current-measurement-illuminance" class="card-text">Illuminance: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item1.Illuminance</p>
-                <p id="current-measurement-humidity" class="card-text">Humidity: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item1.Humidity</p>
-            </div>
+    @if (Model.AdminNodeRoomDto.PastMeasurements.Measurements == null)
+    {
+        <div class="col-6">
+            No sensor is assigned to the room.
         </div>
-        <div class="card text-white bg-info mb-6" style="max-width: 18rem;">
-            <div class="card-header">Policies</div>
-            <div class="card-body">
-                <h5 class="card-title">Current policy</h5>
-                <p id="current-policy-temperature" class="card-text">Expected temperature level: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item2.ExpectedConditions.Temperature</p>
-                <p id="current-policy-illuminance" class="card-text">Expected illuminance level: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item2.ExpectedConditions.Illuminance</p>
-                <p id="current-policy-humidity" class="card-text">Expected humidity level: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item2.ExpectedConditions.Humidity</p>
-            </div>
+    }
+    else
+    {
+        <div class="col-6 vh-100 overflow-auto">
+            <ul id="messagesList">
+                @foreach (var item in Model.AdminNodeRoomDto.PastMeasurements.Measurements.Select((value, i) => new {i, value}))
+                {
+                    string uniqueId = "collapseExample" + item.i;
+                    string href = "#" + uniqueId;
+                    <li>
+                        <p>
+                            <a class="btn btn-primary flex-grow-1" data-toggle="collapse" href="@href" role="button" aria-expanded="false" aria-controls="@uniqueId">
+                                @item.value.Item1.Date.Day/@item.value.Item1.Date.Month/@item.value.Item1.Date.Year @item.value.Item1.Date.Hour:@item.value.Item1.Date.Minute:@item.value.Item1.Date.Second
+                            </a>
+                        </p>
+                        <div class="collapse" id="@uniqueId">
+                            <div class="card card-body">
+                                <p class="card-text">Temperature: @item.value.Item1.Temperature</p>
+                                <p class="card-text">Illuminance: @item.value.Item1.Illuminance</p>
+                                <p class="card-text">Humidity: @item.value.Item1.Humidity</p>
+                                <p class="card-text">Expected temperature level: @item.value.Item2.ExpectedConditions.Temperature</p>
+                                <p class="card-text">Expected illuminance level: @item.value.Item2.ExpectedConditions.Illuminance</p>
+                                <p class="card-text">Expected humidity level: @item.value.Item2.ExpectedConditions.Humidity</p>
+                            </div>
+                        </div>
+                    </li>
+                }
+            </ul>
         </div>
         <div class="col-6">
-            <button id="getCurrentMeasurement" type="button" class="btn btn-primary">Get current measurement</button>
+            <div class="col-6">
+            <button id="getCurrentMeasurement" type="button" class="btn btn-success flex-grow-1">Get current measurement</button>
+            </div>
+            <br/>   
+            <div class="card text-white bg-info mb-6" style="max-width: 18rem;">
+                <div class="card-header">Measurements</div>
+                <div class="card-body">
+                    <h5 class="card-title">Current measurement</h5>
+                    <p id="current-measurement-temperature" class="card-text">Temperature: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item1.Temperature</p>
+                    <p id="current-measurement-illuminance" class="card-text">Illuminance: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item1.Illuminance</p>
+                    <p id="current-measurement-humidity" class="card-text">Humidity: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item1.Humidity</p>
+                </div>
+            </div>
+            <br/>
+            <div class="card text-white bg-info mb-6" style="max-width: 18rem;">
+                <div class="card-header">Policies</div>
+                <div class="card-body">
+                    <h5 class="card-title">Current policy</h5>
+                    <p id="current-policy-temperature" class="card-text">Expected temperature level: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item2.ExpectedConditions.Temperature</p>
+                    <p id="current-policy-illuminance" class="card-text">Expected illuminance level: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item2.ExpectedConditions.Illuminance</p>
+                    <p id="current-policy-humidity" class="card-text">Expected humidity level: @Model.AdminNodeRoomDto.PastMeasurements.Measurements.ElementAt(0).Item2.ExpectedConditions.Humidity</p>
+                </div>
+            </div>
         </div>
-    </div>
+    }
+
 </div>
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script type="text/javascript" src="~/js/@Model.Environment"></script>
